# sphinx-autosummary-accessors

./: .pre-commit-config.yaml  .readthedocs.yaml  README.md  README.rst  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg
.github/workflows/: ci.yaml  format-logs.py  linting.yaml  nightly.yaml  pre-commit.yaml  publish.yaml
accessors/: __init__.py
ci/: requirements.txt
docs/: conf.py  environment.yml  example.py  examples.rst  index.rst  installing.rst  requirements.txt  templates.rst  usage.rst  whats-new.rst
docs/_templates/: custom-template.rst
docs/example/: __init__.py  accessors.py  extensions.py  object.py
sphinx_autosummary_accessors/: __init__.py  autosummary.py  documenters.py  templates.py
