[metadata]
name = accessors
author =
author_email =
license = MIT
description = sphinx autosummary extension to properly format pandas or xarray accessors
long_description_content_type = text/x-rst
long_description = file: README.rst
url = https://github.com/keewis/accessors

[options]
packages = find:
python_requires = >=3.6
install_requires =
    sphinx
    importlib-metadata; python_version < "3.8"

[flake8]
ignore =
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503
exclude=
    .eggs
    doc
