[metadata]
name = sphinx-autosummary-accessors
license = MIT
description = sphinx autosummary extension to properly format pandas or xarray accessors
author = Justus Magin
author_email = keewis@posteo.de
long_description_content_type = text/x-rst
long_description = file: README.rst
url = https://github.com/xarray-contrib/sphinx-autosummary-accessors
project_urls =
  Documentation=https://sphinx-autosummary-accessors.readthedocs.io/en/stable

[options]
packages = find:
python_requires = >=3.6
install_requires =
    sphinx>=3.2
    packaging
    importlib-metadata; python_version < "3.8"

[options.package_data]
sphinx_autosummary_accessors = templates/autosummary/*.rst

[flake8]
ignore =
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503
exclude=
    .eggs
    docs

[isort]
default_section = THIRDPARTY
known_first_party = sphinx_autosummary_accessors
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
